--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Respoke</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">respoke</string>
     <string name="action_settings">Settings</string>
+    <string name="endpointID">Endpoint ID</string>
+    <string name="login_group">Optional Group</string>
+    <string name="connect">Connect</string>
 
 </resources>
