Add initial group list activity, remove actionbar from connectionactivity.

--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="endpointID">Endpoint ID</string>
     <string name="login_group">Optional Group</string>
     <string name="connect">Connect</string>
+    <string name="title_activity_group_list">GroupListActivity</string>
 
 </resources>
