Initial chat activity that shows remote messages as they arrive.

--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="login_group">Optional Group</string>
     <string name="connect">Connect</string>
     <string name="title_activity_group_list">GroupListActivity</string>
+    <string name="title_activity_chat">ChatActivity</string>
 
 </resources>
