--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="action_call">Call</string>
     <string name="action_join">Join</string>
     <string name="pick_call">What kind of call?</string>
+    <string name="pick_presence">Choose a status</string>
     <string name="title_activity_call">CallActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
