Add an activity to show a single group.

--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="title_activity_call">CallActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_group">GroupActivity</string>
 
 </resources>
