--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_group">GroupActivity</string>
+    <string name="title_activity_group_chat">GroupChatActivity</string>
 
 </resources>
