Add the ability to join a new group in the demo app. Always call client listeners in the UI thread from the Respoke SDK to minimize timing problems and simplify client code. Add null pointer protection.

--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_group">GroupActivity</string>
     <string name="title_activity_group_chat">GroupChatActivity</string>
+    <string name="group_id">Group ID</string>
+    <string name="join_a_group">Join A Group:</string>
 
 </resources>
