--- a/Respoke/app/src/main/res/values/strings.xml
+++ b/Respoke/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="endpointID">Endpoint ID</string>
     <string name="login_group">Optional Group</string>
     <string name="connect">Connect</string>
-    <string name="connecting">Connecting...</string>
+    <string name="connecting">Connecting…</string>
     <string name="message">Message</string>
     <string name="end_call">End</string>
     <string name="title_activity_group_list">GroupListActivity</string>
@@ -24,5 +24,8 @@
     <string name="title_activity_group_chat">GroupChatActivity</string>
     <string name="group_id">Group ID</string>
     <string name="join_a_group">Join A Group:</string>
+    <string name="incoming_call">Incoming Call</string>
+    <string name="answer">Answer</string>
+    <string name="ignore">Ignore</string>
 
 </resources>
